Wait for elements

--- a/UnibitSauk2019Demo/UnibitSauk2019Demo/UnibitSauk2019Demo.csproj
+++ b/UnibitSauk2019Demo/UnibitSauk2019Demo/UnibitSauk2019Demo.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="PageObjects\Header.cs" />
     <Compile Include="PageObjects\MainPage.cs" />
+    <Compile Include="PageObjects\SignInPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLogin.cs" />
   </ItemGroup>
