--- a/UnibitSauk2019Demo/UnibitSauk2019Demo/UnibitSauk2019Demo.csproj
+++ b/UnibitSauk2019Demo/UnibitSauk2019Demo/UnibitSauk2019Demo.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseTest.cs" />
     <Compile Include="PageObjects\Header.cs" />
     <Compile Include="PageObjects\MainPage.cs" />
     <Compile Include="PageObjects\SignInPage.cs" />
